chart: update latest data

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Gráfico interativo de avaliação do Presidente Lula (05-Jul a 30-Set) — dados Antagonista/Real Time Big Data. Exportar PNG/CSV, legendas interativas." />
+  <meta name="description" content="Gráfico interativo de avaliação do Presidente Lula (05-Jul a 22-Out) — dados Antagonista/Real Time Big Data. Exportar PNG/CSV, legendas interativas." />
   <meta name="author" content="Vitor de Lucca" />
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Avaliação do Presidente Lula — gráfico" />
-  <meta property="og:description" content="Gráfico interativo de avaliação do Presidente Lula (05-Jul a 30-Set) — dados Antagonista/Real Time Big Data." />
+  <meta property="og:description" content="Gráfico interativo de avaliação do Presidente Lula (05-Jul a 22-Out) — dados Antagonista/Real Time Big Data." />
   <meta property="og:image" content="https://repository-images.githubusercontent.com/placeholder-lula-chart.png" />
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:title" content="Avaliação do Presidente Lula — gráfico" />
-  <meta property="twitter:description" content="Gráfico interativo de avaliação do Presidente Lula (05-Jul a 30-Set) — dados Antagonista/Real Time Big Data." />
+  <meta property="twitter:description" content="Gráfico interativo de avaliação do Presidente Lula (05-Jul a 22-Out) — dados Antagonista/Real Time Big Data." />
   <meta property="twitter:image" content="https://repository-images.githubusercontent.com/placeholder-lula-chart.png" />
   
   <title>Avaliação do Presidente Lula — gráfico</title>
@@ -29,7 +29,7 @@
     <header>
       <div>
         <h1>Avaliação do Presidente Lula — pesquisa diária</h1>
-        <p class="lead">Gráfico interativo — tracking de 05-Jul a 30-Set — Fonte: Antagonista/Real Time Big Data</p>
+        <p class="lead">Gráfico interativo — tracking de 05-Jul a 22-Out — Fonte: Antagonista/Real Time Big Data</p>
       </div>
       <div class="controls">
         <div class="toolbar">
